chore: prepare publish

--- a/packages/exporter-sentry/package.json
+++ b/packages/exporter-sentry/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@acelogger/exporter-sentry",
-  "version": "1.0.0",
+  "name": "acelogger-exporter-sentry",
+  "version": "0.14.0",
   "description": "sentry exporter for acelogger",
   "main": "lib/index.js",
   "typings": "es/index.d.ts",
@@ -15,10 +15,14 @@
     "test:unit": "jest",
     "test:unit-build": "jest -c jest.build.config.js"
   },
+  "files": [
+    "lib",
+    "es"
+  ],
   "author": "wenshin2011@gmail.com",
   "license": "ISC",
   "dependencies": {
-    "@acelogger/logger": "workspace:^0.14.0",
+    "acelogger": "workspace:^0.14.0",
     "whatwg-fetch": "^3.6.2"
   }
 }
