chore: fix publish issue

--- a/packages/exporter-sentry/package.json
+++ b/packages/exporter-sentry/package.json
@@ -7,7 +7,7 @@
   "module": "es/index.js",
   "scripts": {
     "prepublish": "npm run test",
-    "build": "rm -rf lib &>/dev/null && rm -rf es &>/dev/null && pnpm build:lib && pnpm build:es",
+    "build": "rm -rf lib/* &>/dev/null && rm -rf es/* &>/dev/null && pnpm build:lib && pnpm build:es",
     "build:lib": "tsc -p tsconfig.json",
     "build:es": "tsc -p tsconfig.module.json",
     "test": "pnpm build && pnpm test:lint && pnpm test:unit && pnpm test:unit-build",
@@ -22,7 +22,12 @@
   "author": "wenshin2011@gmail.com",
   "license": "ISC",
   "dependencies": {
-    "acelogger": "workspace:^0.14.0",
     "whatwg-fetch": "^3.6.2"
+  },
+  "peerDependencies": {
+    "acelogger": "workspace:^0.14.0"
+  },
+  "devDependencies": {
+    "acelogger": "workspace:^0.14.0"
   }
 }
