--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-typescript": "^7.7.7",
+    "@changesets/cli": "^2.22.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.27",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
