--- a/packages/exporter-sentry/package.json
+++ b/packages/exporter-sentry/package.json
@@ -1,6 +1,6 @@
 {
   "name": "acelogger-exporter-sentry",
-  "version": "0.14.0",
+  "version": "0.14.1",
   "description": "sentry exporter for acelogger",
   "main": "lib/index.js",
   "typings": "es/index.d.ts",
@@ -20,14 +20,14 @@
     "es"
   ],
   "author": "wenshin2011@gmail.com",
-  "license": "ISC",
+  "license": "Apache 2.0",
   "dependencies": {
     "whatwg-fetch": "^3.6.2"
   },
   "peerDependencies": {
-    "acelogger": "workspace:^0.14.0"
+    "acelogger": "workspace:^0.14.1"
   },
   "devDependencies": {
-    "acelogger": "workspace:^0.14.0"
+    "acelogger": "workspace:^0.14.1"
   }
 }
