--- a/packages/exporter-sentry/package.json
+++ b/packages/exporter-sentry/package.json
@@ -22,8 +22,7 @@
   "author": "wenshin2011@gmail.com",
   "license": "Apache 2.0",
   "dependencies": {
-    "acelogger-exporter-sentry-core": "workspace:^0.16.0",
-    "whatwg-fetch": "^3.6.2"
+    "acelogger-exporter-sentry-core": "workspace:^0.16.0"
   },
   "peerDependencies": {
     "acelogger": "workspace:^0.16.0"
