--- a/packages/exporter-sentry-core/package.json
+++ b/packages/exporter-sentry-core/package.json
@@ -26,6 +26,6 @@
     "acelogger": "workspace:^0.17.0"
   },
   "devDependencies": {
-    "acelogger": "workspace:^0.17.0"
+    "acelogger": "workspace:^"
   }
 }
