--- a/packages/exporter-sentry/package.json
+++ b/packages/exporter-sentry/package.json
@@ -23,12 +23,12 @@
   "author": "wenshin2011@gmail.com",
   "license": "Apache 2.0",
   "dependencies": {
-    "acelogger-exporter-sentry-core": "workspace:^0.17.0"
+    "acelogger-exporter-sentry-core": "workspace:^"
   },
   "peerDependencies": {
     "acelogger": "workspace:^0.17.0"
   },
   "devDependencies": {
-    "acelogger": "workspace:^0.17.0"
+    "acelogger": "workspace:^"
   }
 }
