--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "target": "es2017",
     "moduleResolution": "node",
-    "module": "commonjs",
+    "module": "ESNext",
+    "strict": true,
     // 测试代码中有 import json 的需求，如果这个改为 true，会导致 rootDir 必须是 project 根目录，最后导致 build 的路径为 lib/src
     "resolveJsonModule": false,
     "declaration": true,
